--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,9 @@
 
 body {
   background-image: linear-gradient(#4e0081, #af03f3);
-  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  height: 200vh;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -124,6 +126,16 @@ body {
   font-size: 30px;
 }
 
+.song-container .song-card .delete-icon {
+  color: #ff0000; 
+  font-size: 30px;
+}
+
+.song-container .song-card .delete-icon:hover {
+  color: #880000; 
+  cursor: pointer;
+}
+
 .song-container .song-card .add-icon:hover {
   cursor: pointer;
   color: #0000ff66;
@@ -146,6 +158,29 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.create-playlist {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 100%;
+}
+
+.my-repository .repository-container .create-playlist-button {
+  width: 100px;
+  margin: 20px 0 20px 0;
+  border: none;
+  border-radius: 20px;
+  background-color: #a16cf5;
+  color: #fff;
+  font-weight: 700;
+  height: 30px;
+}
+
+.my-repository .repository-container .create-playlist-button:hover {
+  cursor: pointer;
+  background-color: #673aaf;
 }
 
 .my-repository .repository-container button {
